--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,29 @@
+arrow==1.1.1
 asgiref==3.3.4
+binaryornot==0.4.4
+certifi==2021.5.30
+chardet==4.0.0
+charset-normalizer==2.0.4
+click==8.0.1
+cookiecutter==1.7.3
+dj-database-url==0.5.0
 Django==3.2.4
+django-heroku==0.0.0
+gunicorn==20.1.0
+idna==3.2
+Jinja2==3.0.1
+jinja2-time==0.2.0
+MarkupSafe==2.0.1
 Pillow==8.2.0
+poyo==0.5.0
 psycopg2-binary==2.8.6
+python-dateutil==2.8.2
 python-decouple==3.4
+python-slugify==5.0.2
 pytz==2021.1
+requests==2.26.0
+six==1.16.0
 sqlparse==0.4.1
+text-unidecode==1.3
+urllib3==1.26.6
+whitenoise==5.3.0
